Clean out a bunch of cruft:
* There are only two models in the project now; one for the unit tests and one for the example-model project.
* Unification of finding the project root under various circumstances
* Finish entity resolver work, although it's unusable for the most part because MDR doesn't support extensions.